--- a/starwars.css
+++ b/starwars.css
@@ -1,3 +1,7 @@
+p {
+  line-height: 10%;
+}
+
 .cp_table {
   border: 1px solid blue;
   padding: 1rem;
@@ -8,7 +12,7 @@
 }
 
 .cp_table-inf {
-  width: 60%;
+  width: 40%;
 }
 
 .cp_row {
@@ -52,8 +56,8 @@
   float: right;
   font-family: '7LED';
   font-size: 24pt;
-  margin-top: -4rem;
-  margin-right: 2rem;
+  margin-top: -6rem;
+  margin-right: 12rem;
 }
 	
 .content {
@@ -66,15 +70,14 @@
   z-index: 100;
 }
 
-.full_hl {
-  background: rgb(196,196,180);
-  color: rgb(0, 0, 0);
-}
-
 .half_hl {
-  background: rgb(96,96,80);
+  background: #626F7C;
 }
 
+.full_hl {
+  background: #828FAC;
+  color: #000000;
+}
 
 .cursor {
   box-sizing: border-box;
@@ -111,8 +114,8 @@
 }
 
 .buffer {
-  margin-top: 4rem;
-  margin-left: 2rem;
+  margin-top: 0rem;
+  margin-left: 3rem;
 }
 
 .interface {
@@ -135,11 +138,10 @@
 
 .interface_head {
   margin-left: 3vw;
-  margin-top: 0vh;
+  margin-top: 6vh;
   height: 10vh;
   font-size: 1.3rem;
   box-sizing: border-box;
-  color: #B2BFEF;
 }
 
 .interface_foot {
