--- a/styles.css
+++ b/styles.css
@@ -14,30 +14,20 @@
     font-display: swap;
 }
 
-html {
-    background-color: #000000;
-    width: 100vw;
-    height: 100vh;
-}
-
-body {
-    background: url('./images/frame.svg');
-    background-size: cover;
-    margin-top: 0vh;
-    margin-left: 0vh;
-    margin-bottom: 0vh;
-    margin-right: 0vh;
+body,html,a {
+    margin: 0;
+    padding: 0;
+    background: rgb(0, 0, 0);
     font-family: "VT220";
     font-size: 1rem;
-    color: #B2BFEC;
+    color: #B2BFEF;
 }
-
 
 svg {
     display: block;
     width: 50vw;
     height: 90vh;
-    fill: #F04040;;
+    fill: #F04040;
     position: absolute;
     right: 25vw;
     top: 1vh;
@@ -73,7 +63,9 @@ svg {
   display: block;
   overflow: hidden;
   box-sizing: border-box;
-  border-radius: 2rem;
+  background: url('./images/frame.svg');
+  background-size: cover;
+  border-radius: 3rem;
   font-family: "VT220";
 }
 
